# simplediff

./: .flags.h.swp  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
tests/: CMakeLists.txt  digits2.txt  digits3.txt  digits_base.txt  test2.txt  test3.txt
